--- a/Proposal/5fitnessIoT.tex
+++ b/Proposal/5fitnessIoT.tex
@@ -1,3 +1,10 @@
 % !TeX root = proposal.tex
 \chapter{Recommending Privacy Settings for Fitness IoT}\label{chapter:fitnessIoT}
-In this chapter, we present the work completed to date in the areas of designing for privacy for Fitness IoT.
+
+In Chapter~\ref{chapter:householdIoT}, we have discussed recommending privacy preference for household IoT users. In this chapter, we present the work completed to date in the areas of recommending privacy for Fitness IoT. 
+
+Wearable fitness trackers are undoubtedly gaining popularity. As fitness-related data are persistently captured, stored, processed and shared by these devices and related services, the issue of privacy management is becoming increasingly urgent both for the user and the service, which has to respect privacy law, including the new European Union's General Data Protection Regulation (GDPR). This concerns all third parties that manage user data and has of course a major impact on personalization services.
+
+Previous studies in mobile privacy (e.g.,\cite{felt2012android}) have proven that mobile interfaces lack the potential to provide the necessary user privacy information and control for both Android and iOS systems~\cite{lin2014modeling}. Several solutions from literature have been proposed from then on to improve mobile privacy protection and offer users more privacy control (e.g.,~\cite{beresford2011mockdroid}). These leads into rapid improvement of privacy management of current mobile systems (i.e., from Android 6.0+ and iOS 5.0+), providing more control on the user's privacy settings.
+
+As of May 25, 2018, the European Union (EU) enforce the General Data Protection Regulation (GDPR)~\cite{ref:GDPR} which applies to the storage, processing and use of the subject's personal data from the TPs which may or may not have been established in the EU as long as they operate in an EU market or acess data of EU residents. It requires users to provide explicit consent to privacy options expressed by TPs. This results in a complex task for the users given the number of devices and applications which have to be read and processed specifically.
