--- a/Proposal/bibliography.bib
+++ b/Proposal/bibliography.bib
@@ -1,3 +1,70 @@
+@inproceedings{kobsa2006privacy,
+  title={Privacy-enhanced personalization},
+  author={Kobsa, Alfred and Chellappa, Ramnath K and Spiekermann, Sarah},
+  booktitle={CHI'06 extended abstracts on Human factors in computing systems},
+  pages={1631--1634},
+  year={2006},
+  organization={ACM}
+}
+
+@inproceedings{pfitzmann2001anonymity,
+  title={Anonymity, unobservability, and pseudonymity—a proposal for terminology},
+  author={Pfitzmann, Andreas and K{\"o}hntopp, Marit},
+  booktitle={Designing privacy enhancing technologies},
+  pages={1--9},
+  year={2001},
+  organization={Springer}
+}
+
+@article{verykios2004state,
+  title={State-of-the-art in privacy preserving data mining},
+  author={Verykios, Vassilios S and Bertino, Elisa and Fovino, Igor Nai and Provenza, Loredana Parasiliti and Saygin, Yucel and Theodoridis, Yannis},
+  journal={ACM Sigmod Record},
+  volume={33},
+  number={1},
+  pages={50--57},
+  year={2004},
+  publisher={ACM}
+}
+
+@article{taylor2009privacy,
+  title={Privacy concern and online personalization: The moderating effects of information control and compensation},
+  author={Taylor, David G and Davis, Donna F and Jillapalli, Ravi},
+  journal={Electronic commerce research},
+  volume={9},
+  number={3},
+  pages={203--223},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{culnan1993did,
+  title={" How Did They Get My Name?": An Exploratory Investigation of Consumer Attitudes toward Secondary Information Use},
+  author={Culnan, Mary J},
+  journal={MIS quarterly},
+  pages={341--363},
+  year={1993},
+  publisher={JSTOR}
+}
+
+@article{laufer1977privacy,
+  title={Privacy as a concept and a social issue: A multidimensional developmental theory},
+  author={Laufer, Robert S and Wolfe, Maxine},
+  journal={Journal of social Issues},
+  volume={33},
+  number={3},
+  pages={22--42},
+  year={1977},
+  publisher={Wiley Online Library}
+}
+
+@misc{lu2014overview,
+  title={Overview of Security and Privacy Issues in the Internet of Things},
+  author={Lu, Chris},
+  year={2014},
+  publisher={May}
+}
+
 @misc{pricewaterhousecoopers_smart_nodate,
 	author = {PwC},
 	title = {Smart home, seamless life: Unlocking a culture of convenience},
@@ -318,14 +385,6 @@
 	address = {New York, NY, USA},
 	keywords = {esm, experience sampling method, feedback, location sharing, privacy},
 } 
-
-@misc{pricewaterhousecoopers_smart_nodate,
-	author = {PriceWaterhouseCooper US},
-	title = {Smart home, seamless life: {Unlocking} a culture of convenience},
-	url = {https://www.pwc.com/us/en/advisory-services/publications/consumer-intelligence-series/smarthome.html},
-	language = {en\_us},
-	note = "[Online; accessed 27-Jan-2018]"
-}
 
 @phdthesis{knijnenburg2015user,
 	address = {Irvine, CA},
@@ -937,14 +996,6 @@
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	keywords = {esm, experience sampling method, feedback, location sharing, privacy},
-} 
-
-@misc{pricewaterhousecoopers_smart_nodate,
-    author = {PriceWaterhouseCooper US},
-	title = {Smart home, seamless life: {Unlocking} a culture of convenience},
-	url = {https://www.pwc.com/us/en/advisory-services/publications/consumer-intelligence-series/smarthome.html},
-	language = {en\_us},
-    note = "[Online; accessed 27-Jan-2018]"
 }
 
 @article{nissenbaum_privacy_2004,
@@ -1255,3 +1306,53 @@ url = {https://www.usenix.org/conference/soups2016/workshop-program/wpi/presenta
 	pages = {62--67}
 }
 
+@article{lin2014modeling,
+  title={Modeling users’ mobile app privacy preferences: Restoring usability in a sea of permission settings},
+  author={Lin, Jialiu and Liu, Bin and Sadeh, Norman and Hong, Jason I},
+  booktitle={Tenth Symposium on Usable Privacy and Security ($\{$SOUPS$\}$ 2014)},
+  pages={199--212},
+  year={2014}
+}
+
+@inproceedings{sadeh2014modeling,
+  title={Modeling Users’ Mobile App Privacy Preferences: Restoring Usability in a Sea of Permission Settings},
+  author={Sadeh, Jialiu Lin Bin Liu Norman and Hong, Jason I},
+  booktitle={Symposium on Usable Privacy and Security (SOUPS)},
+  year={2014}
+}
+
+@inproceedings{felt2012android,
+  title={Android permissions: User attention, comprehension, and behavior},
+  author={Felt, Adrienne Porter and Ha, Elizabeth and Egelman, Serge and Haney, Ariel and Chin, Erika and Wagner, David},
+  booktitle={Proceedings of the eighth symposium on usable privacy and security},
+  pages={1--14},
+  year={2012},
+  organization={ACM}
+}
+
+%lin8
+@inproceedings{beresford2011mockdroid,
+  title={Mockdroid: trading privacy for application functionality on smartphones},
+  author={Beresford, Alastair R and Rice, Andrew and Skehin, Nicholas and Sohan, Ripduman},
+  booktitle={Proceedings of the 12th workshop on mobile computing systems and applications},
+  pages={49--54},
+  year={2011},
+  organization={ACM}
+}
+
+@article{ref:GDPR,
+	title = {Regulation (EU) 2016/679 Of The European Parliament and of The Council},
+	journal = {Official Journal of the European Union},
+	author = {{The European Parliament and the Council of the European Union}},
+	year = {2016},
+	pages = {1:88}
+}
+
+@inproceedings{namara2018potential,
+  title={The Potential for User-Tailored Privacy on Facebook},
+  author={Namara, Moses and Sloan, Henry and Jaiswal, Priyanka and Knijnenburg, Bart P},
+  booktitle={2018 IEEE Symposium on Privacy-Aware Computing (PAC)},
+  pages={31--42},
+  year={2018},
+  organization={IEEE}
+}
