--- a/Proposal/publication.tex
+++ b/Proposal/publication.tex
@@ -2,7 +2,7 @@
 \chapter{Author's Publications on this topic}
 \noindent The work in this document is partially based on the following related publications.
 \begin{enumerate}
-	\item He, Y. (2019): Recommending Privacy Settings for IoT. In 24th International Conference on Intelligent User Interfaces (IUI ’19 Companion), March 17–20, 2019, Marina del Ray, CA.
+	\item He, Y. (2019): Recommending Privacy Settings for IoT. In 24th International Conference on Intelligent User Interfaces (IUI ’19 Companion), March 17--20, 2019, Marina del Ray, CA.
 	
 	\item He, Y., Bahirat, P., Knijnenburg, B.P. (2018): A Data Driven approach to Designing for Privacy in Household IoT. ACM Transactions on Interactive Intelligent Systems (TiiS).
 	
