--- a/Proposal/1introduction.tex
+++ b/Proposal/1introduction.tex
@@ -3,29 +3,22 @@
  
 During the last two decades, computers have evolved into intricate personal tracking devices such as smart phones, smart watches, and fitness trackers. At the same time, computers and communication technologies are being embedded in appliances such as TVs, refrigerators, light fixtures and thermostats to create `smart home' environments. Finally, public sensing devices track us as we move about the built environment. By using all kinds of sensors, such as cameras, microphones, GPS, accelerometers, even the simplest of appliances are able to gain knowledge of its surrounding and their users. These connected devices exchange data with each other, and further interact with our day-to-day activities. It is no longer surprising that our smart refrigerator knows what food is stored inside it and notify us that we need to buy groceries when we start our cars as we go back home from work. These smart connected devices are arguably revolutionizing our everyday life.
 
-As estimated by Gartner~\cite{eddy2015gartner}, over 21 billion Internet-of-Things (IoT) devices will be in use by 2020. With the rapidly accelerating growth, these IoT technologies is bringing huge potential for social impact. It also comes with a number of key privacy and security risks~\cite{yu2015handling}. 
+As estimated by Gartner~\cite{eddy2015gartner}, over 21 billion Internet-of-Things (IoT) devices will be in use by 2020. With the rapidly accelerating growth, these IoT technologies is bringing huge potential for social impact. However, it also comes with a number of key security and privacy concerns, such as facilitation of the collection of large amounts of consumer data, using that data in ways unexpected by the consumer, and security of data~\cite{lu2014overview, yu2015handling}.  When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which brings privacy risks to the users. It is not surprising that privacy concerns have been identified as an important underlying obstacles to the adoption of IoT~\cite{pricewaterhousecoopers_smart_nodate}. But are there any other factors affecting the acceptance of IoT from users' perspective? Therefore, here comes our first research question: \textbf{RQ1: What are the factors that affect users’ decision when they consider adopting a new IoT device from users' perspective?}
 
-When users are considering adopting new IoT devices, they want to take the benefit of using those smart connected electronic devices by sharing and disclosing certain personal information to get a more personalized experience. However, such disclosed information could be accessed by other smart devices owned by themselves, other people, organizations, government, or some third-parties with good or bad purpose, which will result in unknown privacy risks to the users. Research has shown that privacy concerns
-%s is an important underlying obstacles to the adoption of social and mobile technologies. Privacy concerns 
-have been identified as an important barrier to the growth of IoT~\cite{pricewaterhousecoopers_smart_nodate}.
+Secondly, all the IoT devices are intended to collect information from the users to realize their functionality. Technical solutions can be used to minimize the data collected for such functionality~\cite{kobsa2006privacy,pfitzmann2001anonymity,verykios2004state}, but arguably, any useful functionality would necessitate at least some amount of personal data. Therefore, users will have to trade off privacy and functionality: a solution that is fully privacy preserving will be limited in functionality, while a fully functionality IoT solution would demand extensive data collection and sharing with others. Research has shown that user employ a method called \textit{privacy calculus}---i.e. that they make disclosure decisions by trading off the anticipated benefits with the risks of disclosure~\cite{culnan1993did,laufer1977privacy,taylor2009privacy}. However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to read the privacy policies or the privacy-settings carefully that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. Moreover, each device will have its own fine-grained privacy settings (often hidden deep within an unassuming “other settings” category in the settings interface), and many inter dependencies exist between devices—-both in privacy and functionality. Therefore, there is a large chance that users would make inconsistent privacy decisions that either limit functionality of their IoT devices or that do not protect their privacy in the end. In addition, the current user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question: \textbf{RQ2: Can we design an intelligent user interface to simplify the task of controlling privacy setting for IoT by recommending users the appropriate privacy-setting according to their decision making characteristics?}
 
-Most Internet users take a pragmatic stance when they have to make choices on what information that they want to disclose. They implicitly use a method called \textit{privacy calculus} to process their information disclosure decisions. They compare the perceived risks and anticipated benefit, and make decisions based on this risk-benefit analysis. However, as the diversity of IoT devices increases, it becomes more and more difficult to keep up with the many different ways in which data about ourselves is collected and disseminated. Although generally users care about their privacy, few of them in practice find time to read the privacy policies or the privacy-settings carefully that are provided to them. There are several reasons for this problem: i) Users will pay more attention to the benefit than potential risks from using IoT devices or services. ii) The privacy policies are too long, or the privacy setting of such devices are too complicated, making users irritated to finish reading/setting them. iii) As the number IoT devices rapidly increases, the numbers and options of privacy setting for all the IoT devices will also increase exponentially. This privacy-setting choice overload makes it difficult for IoT users to correctly and precisely make their decision to express their true demands. 
+Finally, after above intelligent user interface is implemented, \textbf{RQ3: Can we evaluate the new privacy-setting recommendation interface?} 
 
-In addition, the user interface for setting privacy preferences of present IoT devices is imperfect even for a smartphone, not to mention the complexity of manually setting privacy preferences for numerous different other IoT devices. Hence, there is an urgent demand to solve the following research question: 
+In this proposal, we try to solve the these three research questions:
 
-\textbf{RQ: How can we help users simplify the task of controlling privacy setting for IoT devices in a user-friendly manner, so that they can make good privacy decisions?} This research question can be further divided into two sub-questions: 1). Can we recommend them the appropriate IoT privacy-setting according to their decision making characteristics? 2). How do they feel about the new privacy-setting recommendation interface that we made?
+For \textbf{RQ1}, in Chapter~\ref{chapter:acceptability}, we first present a preliminary user study that we conduct by interviewing with potential IoT users to gain deeper understanding on the general IoT acceptability from users' perspective since the factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts.
 
-In this proposal, we try to solve the main research question:
+For \textbf{RQ2}, we use 3 chapters to  discusses our existing work on recommending privacy settings for different IoT environments, namely generalize/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively.
+%For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manually setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 different machine learning algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences with detailed explanations. Users can simply choose the one they think the most fit and apply by a single click.In  and Chapter~\ref{chapter:fitnessIoT}, we present our existing work on recommending privacy settings in a more narrow environment---i.e. household IoT and fitness IoT.
 
-In Chapter~\ref{chapter:acceptability}, we first present a preliminary user study that we conduct by interviewing with potential IoT users to gain deeper understanding on the general IoT acceptability from users' perspective since the factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts.
-	
-In Chapter~\ref{chapter:generalIoT}, we try to answer the first sub question by researching the decision-making characteristics of general IoT users. We demonstrate our existing work on recommending privacy settings for general IoT. For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manually setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 different machine learning algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences with detailed explanations. Users can simply choose the one they think the most fit and apply by a single click.
-	
-In Chapter~\ref{chapter:householdIoT}, we still try to answer the first sub question, but in household domain. \textcolor{red}{add more...}
-	
-In Chapter~\ref{chapter:fitnessIoT}, we move our discussion on the first sub question to the fitness IoT domain.\textcolor{red}{add more...}
-	
-Our biggest limitation for the methods that we use in previous chapters is that we didn't test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles). We next address this limitation in Chapter~\ref{chapter:evaluation}. In this chapter, I discuss my proposed study to evaluate the new interface of recommending privacy-settings for household IoT
+Our biggest limitation for the methods that we use in previous chapters is that we didn't test any of the presented interfaces, so we don't know what level of complexity (both in terms of the user interface and the in terms of the profiles). Thus for \textbf{RQ3}, we address this limitation by discussing our proposed study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}.
+
+Finally, Chapter~\ref{chapter:Relatedwork} presents the background and related work of this proposal and we conclude our proposal in Chapter~\ref{chapter:conclusion}.
 
 
 
